Quorum3/Library/Tests/TemplatingGenerated/Pass/TwoTypeObjPriBooleanRettext.quorum
class Main
    action Main
        Boolean one
        one:SetValue(true)
        boolean two = true
        Yoda<Boolean, boolean, text> yoda
        text ret = yoda:useForce(one, two)
        output "passed"
     end
end
