Quorum3/Library/Tests/TemplatingGenerated/Fail/TwoTypePriPriBooleanRettextFail.quorum
class Main
    action Main
        boolean one = true
        boolean two = true
        Yoda<boolean, boolean, text> yoda
        boolean wrongRet = yoda(one, two)
     end
end
